# LightField

./: .gitignore  .gitlab-ci.yml  .gitmodules  1.0.0-1.0.1.patch  CMakeLists.txt  LICENSE  LightFieldSymlinksFix.sh  MakeLightFieldDirectories  PrepareSystem  PrepareSystem.sh  PrepareSystemForPackages  SetUp  change-version-number.sh  configureUbuntuAndInstallLightField.sh  disable-lightfield.sh  fonts-montserrat_7.200_all.deb  fonts.qrc  install-lightfield  install-lightfield.sh  make-deb-package.sh  make-deb-packages  make-deb-packages.sh  make-installer-kit.sh  make-update-kit.sh  make-update-package  make-upgrade-kit.sh  mvp.txt  rebuild  rpi4_packages-to-purge.txt  set-up-pi-part-1.sh  set-up-pi-part-2.sh  set-up-pi.sh  shared-stuff.sh  styles.qrc  todo.txt  uninstall-lightfield.sh  unpack-kit-manually.sh  upgrade-instructions.txt
apt-files/: apt-ftparchive.conf.in  release.conf  version.inf.in  volumetric-lightfield.list
debian/: changelog  control  control.in  copyright  debug-control  lightfield-base.install  lightfield-common-base.install  lightfield-common-dlp4710.install  lightfield-common-xbase.install  lightfield-common-xdlp4710-20um.install  lightfield-common-xdlp4710.install  lightfield-common.install  lightfield-common.postinst  lightfield-common.postrm  lightfield-common.preinst  lightfield-debug.install  lightfield-debug.lightfield.service  lightfield-debug.postinst  lightfield-debug.postrm  lightfield-debug.preinst  lightfield-debug.prerm  lightfield-dlp4710.install  lightfield-firmware.install  lightfield-release.install  lightfield-release.postinst  lightfield-release.postrm  lightfield-release.preinst  lightfield-release.prerm  lightfield-xbase.install  lightfield-xdlp4710-20um.install  lightfield.install  lightfield.install.in  lightfield.postinst.in  lightfield.postrm  lightfield.postrm.in  lightfield.preinst  lightfield.preinst.in  lightfield.prerm  lightfield.prerm.in  release-control
dlp-4710/: Makefile  set-projector-power.cpp
dlp-4710/cyusbserial/: CyUSBCommon.h  Makefile  cyi2c.c  cyspi.c  cyuart.c  cyusb.c
dlp-4710/dlpc347x/: LICENSE  Makefile  dlpc347x.c  dlpc347x.h  dlpc347x_dual.c  dlpc347x_dual.h  dlpc347x_internal_patterns.c  dlpc347x_internal_patterns.h  dlpc_common.c  dlpc_common.h  dlpc_common_private.h
dlp-4710/new-set-projector-power/: Makefile  set-projector-power.cpp
dlp-4710/set-projector-power/: Makefile  cypress_i2c.c  cypress_i2c.h  set-projector-power.c
dlp4710/: 90-dlp4710.rules  Makefile  set-projector-power.cpp  set-projector-power.wrapper
gl/: BoundingBox.stl  gl.qrc  mesh.frag  mesh.vert  mesh_wireframe.frag  quad.frag  quad.vert
gpg/: new-pubring.gpg  pubring.gpg  pubring.kbx  trustdb.gpg
images/: images-dlp4710.qrc  images-dlpc350.qrc  images.qrc
libprojector/: CMakeLists.txt
libprojector/src/: dlp4710impl.cpp  dlp4710impl.h  dlpc350impl.cpp  dlpc350impl.h  libprojector.cpp  libprojector.h  setprojectorpower.cpp
login-user-stuff/: .bashrc  .profile  burn-in-noFan.desktop  burn-in-noHeat.desktop  burn-in-noMotor.desktop  burn-in.desktop  lumenLightField.desktop  lumenLockPrimaryDisplay.desktop  lumenProjectorPower.desktop  lumenTouchPrint.desktop  lumenTouchscreenXinput.desktop  lumenUnclutterHideMouse.desktop  trustDotDesktopFiles.sh
model-library/: 15x15x1.stl  4x4x4mm_1mm.stl  Horizontal lumens 1 mm to 50 um.STL  Statue of Liberty Scaled x2.stl  Statue of Liberty Scaled.stl  screw_nut_test.STL  serpentine_lobule_gel_v4-DS-v2.stl
mountmon/: CMakeLists.txt  mountmon.pro  rebuild
mountmon/src/: commandreader.cpp  commandreader.h  main.cpp  pch.h  processrunner.cpp  signalhandler.cpp  signalhandler.h  udisks.cpp  udisks.h  udisksmonitor.cpp  udisksmonitor.h  usbdevicemounter.cpp  usbdevicemounter.h
old-scripts/: SetUp
print-profiles/: .print-profiles.json.swp  print-profiles-schema.json  print-profiles.json
qt/: fstl.pro  lf.pro  qt.qrc
src/: advancedtab.cpp  advancedtab.h  advancedtabselectionmodel.cpp  advancedtabselectionmodel.h  app.cpp  app.h  backdrop.cpp  backdrop.h  bedheightadjustment.cpp  bedheightadjustment.h  buildinfo.cpp  buildinfo.h  calibration.cpp  calibration.h  calibrationtab.cpp  calibrationtab.h  canvas.cpp  canvas.h  constants.cpp  constants.h  coordinate.h  debug.cpp  debug.h  debuglogcopier.cpp  debuglogcopier.h  filecopier.cpp  filecopier.h  filetab.cpp  filetab.h  firmwarecontroller.cpp  firmwarecontroller.h  gesturelistview.cpp  gesturelistview.h  glerr.h  glmesh.cpp  glmesh.h  gpgsignaturechecker.cpp  gpgsignaturechecker.h  hasher.cpp  hasher.h  (+107 more)
src/tests/: abstracttest.cpp  abstracttest.h  extendedprinttest.cpp  extendedprinttest.h  folderofimagestest.cpp  folderofimagestest.h  printprofiletest.cpp  printprofiletest.h  simpleprinttest.cpp  simpleprinttest.h  testsexecutor.h  tilingtest.cpp  tilingtest.h
stdio-shepherd/: .gitignore  printer.py  stdio-shepherd.py
system-stuff/: 99-waveshare-dlp4710.conf  99-waveshare-dlpc350.conf  99-waveshare.conf  99untrustworthy-clock  clean-up-mount-points.service  com.volumetricbio.LumenX.ConfigureTouchscreen.desktop  com.volumetricbio.LumenX.LightField.desktop  configure-touchscreen  dlp4710-reset-lumen-projector-port  dlp4710-set-projector-power.service  dmesgConnected4710.txt  dmesgDisconnected4710.txt  getty@tty1.service.d_override.conf  lightfield.service  lumen-bash_profile  lumen-lightfield  lumen-real_bash_profile  reset-lumen-arduino-port  reset-printer-port  set-projector-power.service  slash-dev-slash-ttyACM0-EinsyRetro.txt  slash-dev-slash-ttyUSB0-4710Projector.txt  udevadm-info-4710-projector.txt  udevadm-info-mobo-lumen.txt  upgrade-lightfield-firmware  upgrade-lightfield-software
system-stuff/firmware/: Marlin.Volumetric.hex  firmware-flash-during-install.sh  firmware.sh  reset.sh
text/: copyright-message.txt  defaultProfle.txt  text.qrc
usb-driver/: 90-dlpc350.rules  Makefile  README.txt  dlpc350_usb.cpp  main.cpp
